--- a/html/upload.html
+++ b/html/upload.html
@@ -3,42 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload Page</title>
+    <title>Upload Page | WinsVideo Beta</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </head>
 <body>
-    <form action="/upload" method="post" enctype="multipart/form-data">
-        <input type="file" class="video" name="video">
-        <input type="text" class="name" name="name" value="Title">
-        <textarea type="text" class="description" name="description" value="Description"></textarea>
-        
-            <input type="text" id="tagsInput" name="tagsInput" placeholder="Tags" class="form-control">
+    <div class="header" align="center" style="margin-top: 10px;">
+        <h1>WinsVideo Beta | Upload Page | node.js</h1>
+    </div>
 
-            <select name="category" class="form-control">
-                <option value="1">Film &amp; Animation</option>
-                <option value="2">Autos &amp; Vehicles</option>
-                <option value="3">Music</option>
-                <option value="4">Pets &amp; Animals</option>
-                <option value="5">Sports</option>
-                <option value="6">Travel &amp; Events</option>
-                <option value="7">Gaming</option>
-                <option value="8">People &amp; Blogs</option>
-                <option value="9">Comedy</option>
-                <option value="10">Entertainment</option>
-                <option value="11">News &amp; Politics</option>
-                <option value="12">Howto &amp; Style</option>
-                <option value="13">Education</option>
-                <option value="14">Science &amp; Technology</option>
-                <option value="15">Nonprofits &amp; Activism</option>
-                <option value="16">Dominoes</option>
-                <option value="18">Stream</option>
-              </select>
+    <hr>
 
-              <select name="privacy" class="form-control">
-                <option value="1">Public</option>
-                <option value="2">Private</option>
-              </select>
+    <div class="container" style="margin-top: 10px;">
+        <div class="form-control">
+            <form action="/upload" method="post" enctype="multipart/form-data">
+                <div class="mb-3">
+                    <label for="videoInput" class="form-label">Select Video</label>
+                    <input type="file" id="videoInput" class="video form-control" name="video">
+                </div>
 
-        <button class="submitBtn" name="submit">Upload</button>
-    </form>
+                <div class="mb-3">
+                    <label for="titleInput" class="form-label">Title</label>
+                    <input type="text" id="titleInput" class="name form-control" name="name" placeholder="Title">
+                </div>
+
+                <div class="mb-3">
+                    <label for="descriptionInput" class="form-label">Description</label>
+                    <textarea type="text" id="descriptionInput" class="description form-control" name="description" placeholder="Description"></textarea>
+                </div>
+
+                <div class="mb-3">
+                    <label for="tagsInput" class="form-label">Tags</label>
+                    <input type="text" id="tagsInput" name="tagsInput" placeholder="Tags" class="form-control">
+                </div>
+
+                <div class="mb-3">
+                    <label for="categoryInput" class="form-label">Video category</label>
+                    <select id="categoryInput" name="category" class="form-control">
+                        <option value="1">Film &amp; Animation</option>
+                        <option value="2">Autos &amp; Vehicles</option>
+                        <option value="3">Music</option>
+                        <option value="4">Pets &amp; Animals</option>
+                        <option value="5">Sports</option>
+                        <option value="6">Travel &amp; Events</option>
+                        <option value="7">Gaming</option>
+                        <option value="8">People &amp; Blogs</option>
+                        <option value="9">Comedy</option>
+                        <option value="10">Entertainment</option>
+                        <option value="11">News &amp; Politics</option>
+                        <option value="12">Howto &amp; Style</option>
+                        <option value="13">Education</option>
+                        <option value="14">Science &amp; Technology</option>
+                        <option value="15">Nonprofits &amp; Activism</option>
+                        <option value="16">Dominoes</option>
+                        <option value="18">Stream</option>
+                      </select>
+                </div>
+
+                <div class="mb-3">
+                    <label for="privacyInput" class="form-label">Privacy</label>
+                      <select id="privacyInput" name="privacy" class="form-control">
+                        <option value="1">Public</option>
+                        <option value="2">Private</option>
+                      </select>
+                </div>
+
+                <div class="mb-3">
+                    <button class="submitBtn btn btn-success" name="submit">
+
+                        <img src="https://winsvideo.net/assets/images/icons/sharp_cloud_upload_white_24dp.png" style="margin-right: 10px;">
+                        Upload
+
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
